--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "drobs-users",
-  "version": "1.0.0",
+  "name": "@drobs/users",
+  "version": "1.1.0",
   "private": false,
   "scripts": {
     "test": "npm run test",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "publish": "npm publish --access public"
   },
   "devDependencies": {
-    "@emotion/cache": "^11.11",
-    "@emotion/react": "^11.11",
-    "@emotion/styled": "^11.11",
-    "@mui/icons-material": "^5.15",
-    "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drobs-local-storage-react": "^1",
-    "eslint": "^8",
     "eslint-config-next": "14.2",
     "prettier": "3.3.2",
     "react": "^18",
@@ -32,7 +25,6 @@
     "@mui/icons-material": "^5.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15",
-    "drobs-local-storage-react": "^1",
     "react": "^18",
     "react-dom": "^18",
     "react-webcam": "^7.2"
